<resources>
    <string name="app_name">SixthSense</string>
    <string name="title_sensors">Sensors</string>
    <string name="title_plots">Plots</string>
    <string name="title_control">Control</string>
    <string name="title_settings">Settings</string>
    <string name="serttins_host">Host</string>
    <string name="settings_port">Port</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
</resources>